22/12/7 add prototype, preticeDay4Fin

--- a/htmlCssPratice/Day2.html
+++ b/htmlCssPratice/Day2.html
@@ -36,6 +36,13 @@
         <a href="">連結4</a>
         <a href="">連結5</a>
      </nav>
+
+     <figure>
+         <img src="test.png" alt ="test.png">
+         <figcaption>
+            test.png's figcaption.
+         </figcaption>
+     </figure>
      
 </body>
 </html>
