--- a/prototype/index.html
+++ b/prototype/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="input-group">
                     <button class="btn btn-sm btn-primary btn-block btn-login input-height font16"
-                            type="submit" name="login">
+                            type="button" name="login" onclick="location.href='./user.html'">
                         登入 / Login
                     </button>
                 </div>
