--- a/prototype/user.html
+++ b/prototype/user.html
@@ -14,7 +14,7 @@
           <div class="col-2">
             <nav>
                 <a href="./user.html">回使用者主頁</a><br>
-                <a href="./booking.html">預訂會議</a><br>
+                <a href="./booking.html">預定會議</a><br>
                 <a href="./join.html">加入會議</a>
             </nav>
           </div>
@@ -28,7 +28,7 @@
                       <td>主辦人</td>
                     </tr>
                     <tr>
-                      <td>中文(一))</td>
+                      <td>中文(一)</td>
                       <td>2022/12/1</td>
                       <td>通識教育中心</td>
                       <td>莊怡文</td>
