--- a/prototype/join.html
+++ b/prototype/join.html
@@ -12,13 +12,21 @@
     <div class="container">
         <div class="row">
           <div class="col-2">
-            <nav>
-                <a href="./user.html">回使用者主頁</a><br>
-                <a href="./booking.html">預定會議</a><br>
-                <a href="./join.html">加入會議</a>
+            <nav class="navbar justify-content-center navbar-light bg-light">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link" href="./user.html">回使用者主頁</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./booking.html">預定會議</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./join.html">加入會議</a>
+                  </li>
+              </ul>
             </nav>
           </div>
-          <div class="col-6">
+          <div class="col-8">
             <h1>加入會議</h1>
             <input type="text" name="加入會議"
                            placeholder="請輸入會議代碼/連結">
@@ -27,13 +35,13 @@
                 點我加入!
             </button>
           </div>
-          <div class="col-4">
+          <!-- <div class="col-2">
             <nav>
                 <h1>會議</h1>
                 <a href="./booking.html">預定會議</a><br>
                 <a href="./join.html">加入會議</a>
             </nav>   
-          </div>
+          </div> -->
         </div>
       </div>
 </body>
