--- a/prototype/user.html
+++ b/prototype/user.html
@@ -12,14 +12,65 @@
     <div class="container">
         <div class="row">
           <div class="col-2">
-            <nav>
-                <a href="./user.html">回使用者主頁</a><br>
-                <a href="./booking.html">預定會議</a><br>
-                <a href="./join.html">加入會議</a>
+            <nav class="navbar justify-content-center navbar-light bg-light">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link" href="./user.html">回使用者主頁</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./booking.html">預定會議</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./join.html">加入會議</a>
+                  </li>
+              </ul>
             </nav>
           </div>
-          <div class="col-6">
-                <h1>過往會議列表</h1>
+          <div class="col-8">
+            <h1>歷史會議列表</h1>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">會議名稱</th>
+                  <th scope="col">日期</th>
+                  <th scope="col">主辦單位</th>
+                  <th scope="col">主辦人</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="table-primary">
+                  <td>中文(一)</td>
+                  <td>2022/12/1</td>
+                  <td>通識教育中心</td>
+                  <td>莊怡文</td>
+                </tr>
+                <tr class="table-secondary">
+                  <td>英文(一)</td>
+                  <td>2022/12/2</td>
+                  <td>語言教學中心</td>
+                  <td>張敏慧</td>
+                </tr>
+                <tr class="table-success">
+                    <td>通識1</td>
+                    <td>2022/12/3</td>
+                    <td>通識教育中心</td>
+                    <td>方俊源</td>
+                  </tr>
+                  <tr class="table-danger">
+                    <td>安全程式設計</td>
+                    <td>2022/12/4</td>
+                    <td>多媒體網路實驗室</td>
+                    <td>林易泉</td>
+                  </tr>
+                  <tr class="table-warning">
+                    <td>3D列印切片應用</td>
+                    <td>2022/12/4</td>
+                    <td>中部創新自造教育基地</td>
+                    <td>DreamMaker</td>
+                  </tr>
+              </tbody>
+            </table>
+                <!-- 
                 <table>
                     <tr>
                       <td>會議名稱</td>
@@ -57,15 +108,15 @@
                         <td>中部創新自造教育基地</td>
                         <td>DreamMaker</td>
                       </tr>
-                  </table>
+                  </table> -->
           </div>
-          <div class="col-4">
+          <!-- <div class="col-2">
             <nav>
                 <h1>會議</h1>
                 <a href="./booking.html">預定會議</a><br>
                 <a href="./join.html">加入會議</a>
             </nav>   
-          </div>
+          </div> -->
         </div>
       </div>
 </body>
